--- a/hello-world/src/index.html
+++ b/hello-world/src/index.html
@@ -8,7 +8,7 @@
 <body style="background-color:black;">
     <font face="Arial">
     <h1 style="color:grey">Hello World Website</h1>
-    <p1 style="color:grey">Welcome to the self hosted Epichouse website.<br></p1>
+    <p1 style="color:grey">Welcome to the self hosted Epichouse website.</p1>
     </font>
 </body>
 
